# piweather.center

./: .gitignore  .gitignore.swp  Go.include  Jenkinsfile  Makefile  Makefile.am  Makefile.in  Makefile.include  README  README.md  SubMakefile.in  blocklist.yaml  configure  configure.ac  debian.yaml  global_config.h  global_config.h.in  go.mod  piweather_build.h.in  piweather_build.sh  platforms.md  version.go  videogenerator.yaml
3dmodels/: BoltHoleCard.scad  Common.scad  FilterHolders.scad  PiCameraMount.scad  TextGenerator.scad  bracket-side.scad  bracket-top.scad  pluviometer.scad  skycam-polar-wedge.scad  skycam.scad  solarscope-tube.scad  stephenson-screen.scad  telescopeMount.scad  webcamWindowV1.scad
3dmodels/stl/: BoltHoleCard.stl  PiCameraMount-50mm.stl  bracket-side-bracket.stl  bracket-side.stl  bracket-top-2.stl  bracket-top-3.stl  bracket-top-4.stl
apt/common/: control
arduino/arduino_cpu_temperature_sensor/: README  arduino_cpu_temperature_sensor.ino
arduino/arduino_generic_slave/: arduino_generic_slave.ino
arduino/arduino_weather_slave/: arduino_weather_slave.ino
astro/: Makefile  Makefile.in  ephemeris.c  location.h  math.h  observatory.h  sun.h  time.h
astro/api/: ephemeris.go  ephemeris_test.go  ephemeriscommon.go  ephemerisday.go  ephemerisresult.go  option.go  table.go
astro/calculator/: calculator.go  daylight.go  daylight_test.go  moon.go  planet.go  riseset.go  solar.go  solarsystem.go
astro/catalogue/: catalog.go  cataloglayer.go  entry.go  ephemerislayer.go  featureset.go  handler.go  manager.go
astro/chart/: axes.go  catalog.go  helpers.go  layer.go  layers.go  path.go  pixelstars.go  projection.go
astro/coord/: coordtransforms.go  earth.go  equatorial.go  equatorial_test.go  parser.go  parser_test.go  riseset.go  sun.go
astro/date/: calday.c  century.c  julday.c  juldayd.c  juldaytime.c  juldaytm.c  julian0h.c  mjd.c
astro/ephemeris/: entry.go  ephemeris.go  predicate.go  provider.go  sun.go  sun_test.go
astro/julian/: century.go  date.go  iterator.go  iterator_test.go  julian.go  julian_test.go  math.go  parser.go  parser_test.go  predicate.go  predicate_test.go  range.go  range_test.go  year.go
astro/location/: init.c
astro/math/: polynomial.c  range.c
astro/sidereal/: time.go  time_test.go
astro/siderial/: time.go  time_test.go
astro/sun/: ecliptic.go  sun.go  sun_test.go  sunpos.c  sunradec.c  sunriseset.c
astro/time/: service.go  siderial_greenwich.c
astro/util/: Predicate.go  angle.go  angle_test.go  io.go  polynomial.go  reader.go  string.go  sum.go  time.go  timeString.go  writer.go
camera/: Makefile.in  camera.h
camera/api/: init.c  start.c  stop.c  timedLoop.c
clouds/: Makefile.in  cloudcoverage.c  clouds.h  render_postinit.c  renderer.c
config/: lexer.go
config/calc/: builder.go  config.go  init.go  parser.go  visitor.go
config/egress/: builder.go  init.go  lang.go  state.go  visitor.go
config/location/: location.go  visitor.go
config/misc/: crontab.go  unit.go
config/ql/: aliasedexpression.go  aliasedgroup.go  builder.go  expression.go  expressionmodifier.go  function.go  histogram.go  init.go  metric.go  parser.go  parser_test.go  query.go  queryrange.go  select.go  selectexpression.go  summarize.go  table.go  tableselect.go  time.go  using.go  usingdefinition.go  usingdefinitions.go  visitor.go  windrose.go
config/sensors/: builder.go  init.go  visitor.go
config/station/: aggregators.go  axis.go  builder.go  calculatefrom.go  calculation.go  calculationlist.go  component.go  componentlist.go  componentlistentry.go  container.go  current.go  dashboard.go  dashboardlist.go  ephemeris.go  ephemerisschedule.go  ephemeristarget.go  ephemeristargetoption.go  expression.go  expressionatom.go  expressionlevels.go  function.go  gauge.go  http.go  httpformat.go  i2c.go  i2cdisabled.go  i2cenabled.go  job.go  jobtask.go  load.go  locationexpression.go  metric.go  metricexpression.go  metriclist.go  metricpattern.go  multivalue.go  parser.go  parser_test.go  printer.go  pseudo.go  (+23 more)
data/: README.md
demos/: sunriseset.c
documentation/: _index.html
etc/: README.md  annotation  camera  comqtt.yaml  cpu  piweatherboard  webserver
graph/: axes.go  path.go  polyline.go  projection.go  styles.go  svg.go
homeassistant/: config.go  output.go  service.go
image/: Makefile  errors.go  image.go  json.go  mask.go
imagefilter/: Makefile.in  filter.h  pw_add.c  pw_app.h  pw_cloud.c  pw_difference.c  pw_intersect.c  pw_mask.c  pw_merge.c  pw_subtract.c  pw_sun.c
influxdb/: config.go  influxdb.go
ingress/: ingress.go
io/: lines.go  lines_test.go  reader.go  writer.go
lib/: Makefile.in  blockingQueue.h  bytebuffer.h  charbuffer.h  config.h  file.h  hashmap.h  history.h  list.h  string.h  table.h  thread.h  threadpool.h
log/: Makefile
logger/: Makefile.in  logger.h
nbproject/: configurations.xml  project.xml
rabbitmqapi/: Makefile.in  README  connect.c  init.c  publish.c  publish_bytebuffer.c  publish_bytes.c  publish_charbuffer.c  rabbitmq.h
renderers/: FileRenderer.c  Makefile.in  annotatedRenderer.c  annotation.c  annotation.h  imagerenderer.h  rawRenderer.c  thumbnailRenderer.c
scheduler/: Makefile.in  scheduler.h  test.c
script/: init.go
sensors/: Makefile.in  bus.go  i2c.go  list.go  manager.go  reading.go  sensors.h  serial.go
server/: server.go
station/: calculated.go  calculation.go  component.go  dashboard.go  graph.go  init.go  line.go  location.go  output.go  payload.go  payload_test.go  reading.go  response.go  response_test.go  sensor.go  service.go  sources.go  station.go  stations.go  uid.go  visitor.go
store/: archiver.go  datasource.go  state.go  store.go
tools/: Makefile  README.md
util/: Makefile  codec.go  datasource.go  debug.go  endpoints.go  format.go  genericlist.go  json.go  map.go  path.go  pattern.go  set.go  string.go  time.go  wind.go  wind_test.go
weatherstation/: Makefile.in  main.h  piweather.c  weatherstation.c  weatherstation.h
web/: menu.yaml
webserver/: Makefile.in  webserver.h
www/: cpu.html  index.html  temp.html
(+907 files in other folders)
